@@ -2,25 +2,27 @@ package com.svtsygankov.project_servlet_java_rush.dao;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.svtsygankov.project_servlet_java_rush.entity.Test;
-
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class TestDao {
 
     private final ObjectMapper objectMapper;
     private final File testsDirectory;
-
     private final AtomicInteger currentId = new AtomicInteger(0);
 
     public TestDao(ObjectMapper objectMapper, File testsDirectory) throws IOException {
+
         this.objectMapper = objectMapper;
         this.testsDirectory = testsDirectory;
+
+        if (!testsDirectory.exists()) {
+            testsDirectory.mkdirs();
+        }
+
         initCurrentId();
     }
 
@@ -40,20 +42,22 @@ public class TestDao {
         return currentId.incrementAndGet();
     }
 
-    public List<Test> findAll() throws IOException {
+     public List<Test> findAll() throws IOException {
         List<Test> tests = new ArrayList<>();
 
-        for (File file : Objects.requireNonNull(testsDirectory.listFiles())) {
-            if (file.getName().startsWith("test") && file.getName().endsWith(".json")) {
-                Test test = objectMapper.readValue(file, Test.class);
-                tests.add(test);
+        if (testsDirectory.exists() && testsDirectory.isDirectory()) {
+            File[] jsonFiles = testsDirectory.listFiles((dir, name) -> name.matches("test\\d+\\.json"));
+            if (jsonFiles != null) {
+                for (File file : jsonFiles) {
+                   Test test = objectMapper.readValue(file, Test.class);
+                   tests.add(test);
+                }
             }
         }
         return tests;
     }
 
-    // Найти тест по ID
-    public Test getTestById(Integer id) throws IOException {
+    public Test findById(int id) throws IOException {
         File file = new File(testsDirectory, "test" + id + ".json");
         if (!file.exists()) {
             return null;
@@ -61,31 +65,40 @@ public class TestDao {
         return objectMapper.readValue(file, Test.class);
     }
 
-    // Поиск тестов по имени (частичное совпадение)
-    public List<Test> findTestsByName(String partialName) throws IOException {
-        String lowerCase = partialName.toLowerCase();
-        return findAll().stream()
-                .filter(t -> t.getName() != null && t.getName().toLowerCase().contains(lowerCase))
-                .collect(Collectors.toList());
+    public List<Test> findByTitle(String title) throws IOException {
+        List<Test> tests = findAll();
+        return tests.stream()
+                .filter(test -> test.getTitle().toLowerCase().contains(title.toLowerCase()))
+                .toList();
     }
 
-    // Поиск тестов по теме (частичное совпадение)
-    public List<Test> findTestsByTopic(String partialTopic) throws IOException {
-        String lowerCase = partialTopic.toLowerCase();
-        return findAll().stream()
-                .filter(t -> t.getTopic() != null && t.getTopic().toLowerCase().contains(lowerCase))
-                .collect(Collectors.toList());
+    public List<Test> findByTopic(String topic) throws IOException {
+        List<Test> tests = findAll();
+        return tests.stream()
+                .filter(test -> test.getTopic().toLowerCase().contains(topic.toLowerCase()))
+                .toList();
     }
 
-    // Сохранить тест в файл
     public void save(Test test) throws IOException {
-        File file = new File(testsDirectory, "test" + test.getId() + ".json");
-        objectMapper.writeValue(file, test);
+        String filename = "test" + test.getId() + ".json";
+        File fileToSave = new File(testsDirectory, filename);
+        objectMapper.writeValue(fileToSave, test);
     }
 
-    // Удалить тест по ID
-    public boolean deleteTest(Integer id) {
-        File file = new File(testsDirectory, "test" + id + ".json");
-        return file.exists() && file.delete();
+    public boolean deleteById(int id) throws IOException {
+        String filename = "test" + id + ".json";
+        File fileToDelete = new File(testsDirectory, filename);
+
+        if (!fileToDelete.exists()) {
+            return false;
+        }
+
+        return fileToDelete.delete();
+    }
+
+    // Вспомогательный метод: извлекает ID из имени файла test123.json
+    private Integer extractTestId(File file) {
+        String name = file.getName();
+        return Integer.parseInt(name.replaceAll("[^\\d]", ""));
     }
 }
